tests/NormalTests/paczka1/fuzzy1/84860144.err
Error in line 6: Mwd0M S812 72,8
Error in line 1: CSdAC5Xthmf A108 15,0
Error in line 15: NovVnt A605 50,8
Error in line 13: CSdAC5Xthmf A605 78,9
Error in line 19: CSdAC5Xthmf S8J2 64,7
Error in line 26: CSdAC5Xthmf A108 33,3
